k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name:  application
          image: app:v1.0
          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html/images/
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
