k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always
      nodeSelector:
        "kubernetes.io/hostname": "minikube-m02"
      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
      containers:
        - image: "my-nginx:v1.0"
          name: nginx-container
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html/images/
