k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-service
  labels:
    app: application
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
